--- a/calculadora.html
+++ b/calculadora.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="utf-8">	
 	<meta name="Description" charset="Atividade de html, javascrip e css, produzir uma Cclculadora">
-	<meta name="author" charset="Nicolly de Morais Pereira">
+	<meta name="author" charset="Maria de Jesus">
 
 	<title>Calculadora</title>
 	<link rel="stylesheet" href="CSS/calculadora.css">
 
 </head>
 <body>
-	<h1>Calculadora de Nicolly</h1>
+	<h1>Calculadora de Jesus</h1>
 
 	<div class="aparelho">
 		<p id="resultado"></p>
